<resources>
    <string name="app_name">Slack GC</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logout">Logout</string>
    <string name="no_files">No files</string>
    <string name="remove_selected_files">Remove selected files</string>
    <string name="please_wait">Please wait…</string>
    <string name="removal_completed">Removal completed</string>
    <string name="apply_filter">Apply Filter:</string>
    <string name="pdf_files">PDF files</string>
    <string name="zip_files">Zip files</string>
    <string name="google_docs">Google docs</string>
    <string name="image_files">Image files</string>
    <string name="posts">Posts</string>
    <string name="snippets">Snippets</string>
    <string name="filter">Filter</string>
    <string name="select_all">Select all</string>
    <string name="loading">Loading...</string>
    <string name="removing_file_message">Removing %s</string>
</resources>
